--- a/MobilReklame/MobilReklame/Views/CaseCreation.xaml
+++ b/MobilReklame/MobilReklame/Views/CaseCreation.xaml
@@ -19,9 +19,14 @@
             <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Kunde information" FontSize="32"/>
-        <TextBlock Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Sags Information" FontSize="32"/>
-
+        <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0,0.5" Width="280">
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Kunde information" FontSize="32"/>
+        </Border>
+        
+        <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0,0.5" Grid.Column="1" Width="280">
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Sags Information" FontSize="32"/>
+        </Border>
+        
         <Grid Grid.ColumnSpan="2" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70*"/>
