Hmm it almost works

--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -155,50 +155,53 @@
         </StackPanel>
 
         <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0.5,0" Grid.Row="1" Grid.RowSpan="2">
-            <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" ItemsSource="{Binding OrderMasterDtailsViewModel.ItemViewModelCollection, Mode=TwoWay}" 
+            <ListView x:Name="CaseList" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" ItemsSource="{Binding OrderMasterDtailsViewModel.ItemViewModelCollection, Mode=TwoWay}" 
                       SelectedItem="{Binding OrderMasterDtailsViewModel.ItemViewModelSelected, Mode=TwoWay}">
-                
-                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
 
-                    <Grid.Resources>
-                        <Style TargetType="TextBlock" x:Name="items">
-                            <Setter Property="Margin" Value="0,0,5,0"/>
-                            <Setter Property="FontSize" Value="20"/>
-                        </Style>
-                    </Grid.Resources>
+                            <Grid.Resources>
+                                <Style TargetType="TextBlock" x:Name="items">
+                                    <Setter Property="Margin" Value="0,0,5,0"/>
+                                    <Setter Property="FontSize" Value="20"/>
+                                </Style>
+                            </Grid.Resources>
 
-                    <StackPanel Orientation="Horizontal" Width="auto">
-                        <TextBlock Text="Kunde navn:" Style="{StaticResource items}"/>
-                        <TextBlock Text="{Binding CustomerMasterDetailsViewModel.CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
-                    </StackPanel>
+                            <StackPanel Orientation="Horizontal" Width="auto">
+                                <TextBlock Text="Kunde navn:" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Column="1" Width="auto">
-                        <TextBlock Text="CVR nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
-                        <TextBlock Text="{Binding CustomerMasterDetailsViewModel.CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
-                    </StackPanel>
+                            <StackPanel Orientation="Horizontal" Grid.Column="1" Width="auto">
+                                <TextBlock Text="CVR nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
+                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="1">
-                        <TextBlock Text="E-mail:" Style="{StaticResource items}"/>
-                        <TextBlock Text="{Binding CustomerMasterDetailsViewModel.Email, Mode=TwoWay}" Style="{StaticResource items}"/>
-                    </StackPanel>
+                            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                                <TextBlock Text="E-mail:" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.Email, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
-                        <TextBlock Text="Tlf nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
-                        <TextBlock Text="{Binding CustomerMasterDetailsViewModel.PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
-                    </StackPanel>
-                    
-                    <TextBlock Style="{StaticResource items}" Text="{Binding OrderMasterDtailsViewModel.OrderStatus, Mode=TwoWay}" Grid.Row="2"/>
-                </Grid>
+                            <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
+                                <TextBlock Text="Tlf nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
+                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
+
+                            <TextBlock Style="{StaticResource items}" Text="{Binding OrderMasterDtailsViewModel.OrderStatus, Mode=TwoWay}" Grid.Row="2"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>       
             </ListView>
         </Border>
 
