--- a/MobilReklame/MobilReklame/Views/Customer List.xaml
+++ b/MobilReklame/MobilReklame/Views/Customer List.xaml
@@ -2,14 +2,13 @@
     x:Class="MobilReklame.Views.Customer_List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MobilReklame.Views"
+    xmlns:local="using:MobilReklame.Controllers.ViewModels.CustomerVM"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:customerVm="using:MobilReklame.Controllers.ViewModels.CustomerVM"
     mc:Ignorable="d">
     
     <Page.DataContext>
-        <customerVm:CustomerMDVM/>
+        <local:CustomerMDVM/>
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -92,13 +91,13 @@
                 <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TextBlock Style="{StaticResource textblocks}" Text="Kunde information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
 
-                    <TextBox x:Name="CVR_" Style="{StaticResource textboxes}" PlaceholderText="CVR." Text="{Binding CustomerMasterDetailsViewModel.CvrNumber, Mode=TwoWay}"/>
-                    <TextBox x:Name="CompanyName" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding CustomerMasterDetailsViewModel.ContactName, Mode=TwoWay}"/>
-                    <TextBox x:Name="Tlf_nr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding CustomerMasterDetailsViewModel.PhoneNumber, Mode=TwoWay}" />
-                    <TextBox x:Name="E_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding CustomerMasterDetailsViewModel.Email, Mode=TwoWay}"/>
-                    <TextBox x:Name="ContactPerson" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding CustomerMasterDetailsViewModel.ContactName, Mode=TwoWay}"/>
-                    <TextBox x:Name="ContactPhoneNr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding CustomerMasterDetailsViewModel.ContactPhoneNumber, Mode=TwoWay}"/>
-                    <TextBox x:Name="ContactE_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding CustomerMasterDetailsViewModel.ContactEmail, Mode=TwoWay}"/>
+                    <TextBox x:Name="CVR_" Style="{StaticResource textboxes}" PlaceholderText="CVR." Text="{Binding CvrNumber, Mode=TwoWay}"/>
+                    <TextBox x:Name="CompanyName" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding ContactName, Mode=TwoWay}"/>
+                    <TextBox x:Name="Tlf_nr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding PhoneNumber, Mode=TwoWay}" />
+                    <TextBox x:Name="E_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding Email, Mode=TwoWay}"/>
+                    <TextBox x:Name="ContactPerson" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding ContactName, Mode=TwoWay}"/>
+                    <TextBox x:Name="ContactPhoneNr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding ContactPhoneNumber, Mode=TwoWay}"/>
+                    <TextBox x:Name="ContactE_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding ContactEmail, Mode=TwoWay}"/>
                     <TextBox x:Name="Notes" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding CustomerMasterDetailsViewModel.Notes, Mode=TwoWay}"/>
 
                     <TextBlock Style="{StaticResource textblocks}"/>
@@ -107,7 +106,7 @@
         </ScrollViewer>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
-            <Button x:Name="NewCase" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CaseCreation" Command="{Binding OrderMasterDtailsViewModel.CreateCommand}">
+            <Button x:Name="NewCase" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CaseCreation">
                 <SymbolIcon Symbol="Add"/>
             </Button>
 
@@ -131,6 +130,55 @@
         </StackPanel>
 
         <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0.5,0" Grid.Row="1" Grid.RowSpan="2">
+            <ListView x:Name="CaseList" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" ItemsSource="{Binding ItemViewModelCollection}" 
+                      SelectedItem="{Binding ItemViewModelSelected, Mode=TwoWay}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Grid.Resources>
+                                <Style TargetType="TextBlock" x:Name="items">
+                                    <Setter Property="Margin" Value="0,0,5,0"/>
+                                    <Setter Property="FontSize" Value="20"/>
+                                </Style>
+                            </Grid.Resources>
+
+                            <StackPanel Orientation="Horizontal" Width="auto">
+                                <TextBlock Text="Kunde navn:" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Grid.Column="1" Width="auto">
+                                <TextBlock Text="CVR nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
+                                <TextBlock Text="{Binding CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                                <TextBlock Text="E-mail:" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding Email, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
+                                <TextBlock Text="Tlf nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
+                                <TextBlock Text="{Binding PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+
+                </ListView.ItemTemplate>
+            </ListView>
+        </Border>
+
+        <!--<Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0.5,0" Grid.Row="1" Grid.RowSpan="2">
             <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Grid.Row="1" ItemsSource="{Binding ItemViewModelCollection}" SelectedItem="{Binding ItemViewModelsSelected, Mode=TwoWay}">
                 <ListView.Template>
                     <DataTemplate>
@@ -175,7 +223,7 @@
                     </DataTemplate>
                 </ListView.Template>
             </ListView>
-        </Border>
+        </Border>-->
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
             <Button x:Name="Delete" Style="{StaticResource EditDel}" Margin="50,20,10,20">
