--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -2,14 +2,14 @@
     x:Class="MobilReklame.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MobilReklame.Controllers.ViewModels"
+    xmlns:local="using:MobilReklame.Controllers.ViewModels.OrderVM"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:interop="using:Windows.UI.Xaml.Interop"
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <local:CombinedMDVM/>
+        <local:OrderMDVM/>
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -101,23 +101,23 @@
                 <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TextBlock Style="{StaticResource textblocks}" Text="Kunde information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
 
-                    <TextBox x:Name="CVR_" Style="{StaticResource textboxes}" PlaceholderText="CVR." Text="{Binding CustomerMasterDetailsViewModel.CvrNumber, Mode=TwoWay}"/>
-                    <TextBox x:Name="CompanyName" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding CustomerMasterDetailsViewModel.ContactName, Mode=TwoWay}"/>
-                    <TextBox x:Name="Tlf_nr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding CustomerMasterDetailsViewModel.PhoneNumber, Mode=TwoWay}" />
-                    <TextBox x:Name="E_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding CustomerMasterDetailsViewModel.Email, Mode=TwoWay}"/>
-                    <TextBox x:Name="ContactPerson" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding CustomerMasterDetailsViewModel.ContactName, Mode=TwoWay}"/>
-                    <TextBox x:Name="ContactPhoneNr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding CustomerMasterDetailsViewModel.ContactPhoneNumber, Mode=TwoWay}"/>
-                    <TextBox x:Name="ContactE_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding CustomerMasterDetailsViewModel.ContactEmail, Mode=TwoWay}"/>
-                    <TextBox x:Name="Notes" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding CustomerMasterDetailsViewModel.Notes, Mode=TwoWay}"/>
+                    <TextBox x:Name="CVR_" Style="{StaticResource textboxes}" PlaceholderText="CVR." Text="{Binding OrderCustomer.CvrNumber, Mode=TwoWay}"/>
+                    <TextBox x:Name="CompanyName" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding OrderCustomer.ContactName, Mode=TwoWay}"/>
+                    <TextBox x:Name="Tlf_nr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding OrderCustomer.PhoneNumber, Mode=TwoWay}" />
+                    <TextBox x:Name="E_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding OrderCustomer.Email, Mode=TwoWay}"/>
+                    <TextBox x:Name="ContactPerson" Style="{StaticResource textboxes}" PlaceholderText="Navn" Text="{Binding OrderCustomer.ContactName, Mode=TwoWay}"/>
+                    <TextBox x:Name="ContactPhoneNr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer" Text="{Binding OrderCustomer.ContactPhoneNumber, Mode=TwoWay}"/>
+                    <TextBox x:Name="ContactE_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail" Text="{Binding OrderCustomer.ContactEmail, Mode=TwoWay}"/>
+                    <TextBox x:Name="Notes" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding OrderCustomer.Notes, Mode=TwoWay}"/>
 
                     <TextBlock Style="{StaticResource textblocks}" Text="Opgave Information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
 
-                    <TextBox x:Name="OrderNumber" Style="{StaticResource textboxes}" Text="{Binding OrderMasterDtailsViewModel.OrderNumber, Mode=TwoWay}" />
-                    <DatePicker x:Name="start" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5" IsEnabled="False" Date="{Binding OrderMasterDtailsViewModel.StartupDate, Mode=TwoWay}"/>
-                    <DatePicker x:Name="End" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5" IsEnabled="False" Date="{Binding OrderMasterDtailsViewModel.DeadlineDate, Mode=TwoWay}"/>
-                    <TextBox x:Name="CaseDescription" Style="{StaticResource textboxes}" Text="{Binding OrderMasterDtailsViewModel.WorkDescription}"/>
-                    <TextBox x:Name="CaseMaterials" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding OrderMasterDtailsViewModel.OrderMaterials, Mode=TwoWay}"/>
-                    <TextBox x:Name="OrderCustomer" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding OrderMasterDtailsViewModel.OrderCustomer, Mode=TwoWay}"/>
+                    <TextBox x:Name="OrderNumber" Style="{StaticResource textboxes}" Text="{Binding OrderNumber, Mode=TwoWay}" />
+                    <DatePicker x:Name="start" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5" IsEnabled="False" Date="{Binding StartupDate, Mode=TwoWay}"/>
+                    <DatePicker x:Name="End" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5" IsEnabled="False" Date="{Binding DeadlineDate, Mode=TwoWay}"/>
+                    <TextBox x:Name="CaseDescription" Style="{StaticResource textboxes}" Text="{Binding WorkDescription}"/>
+                    <TextBox x:Name="CaseMaterials" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding OrderMaterials.Data, Mode=TwoWay}"/>
+                    <TextBox x:Name="OrderCustomer" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding OrderCustomer.ContactName, Mode=TwoWay}"/>
                     <TextBlock Style="{StaticResource textblocks}"/>
                 </StackPanel>
             </Grid>
@@ -153,10 +153,12 @@
             <Button x:Name="Tab4" Content="Tab 4" Style="{StaticResource TabStyle}"/>
 
         </StackPanel>
-
+        
         <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0.5,0" Grid.Row="1" Grid.RowSpan="2">
-            <ListView x:Name="CaseList" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" ItemsSource="{Binding OrderMasterDtailsViewModel.ItemViewModelCollection}" 
-                      SelectedItem="{Binding OrderMasterDtailsViewModel.ItemViewModelSelected, Mode=TwoWay}">
+            <ScrollViewer VerticalScrollBarVisibility="Visible">
+                
+                <ListView x:Name="CaseList" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" ItemsSource="{Binding ItemViewModelCollection, Mode=TwoWay}" 
+                      SelectedItem="{Binding ItemViewModelSelected, Mode=TwoWay}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -180,29 +182,30 @@
 
                             <StackPanel Orientation="Horizontal" Width="auto">
                                 <TextBlock Text="Kunde navn:" Style="{StaticResource items}"/>
-                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding OrderCustomer.CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Grid.Column="1" Width="auto">
                                 <TextBlock Text="CVR nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
-                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding OrderCustomer.CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Grid.Row="1">
                                 <TextBlock Text="E-mail:" Style="{StaticResource items}"/>
-                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.Email, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding OrderCustomer.Email, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
                                 <TextBlock Text="Tlf nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
-                                <TextBlock Text="{Binding CustomerMasterDetailsViewModel.PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding OrderCustomer.PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
-                            <TextBlock Style="{StaticResource items}" Text="{Binding OrderMasterDtailsViewModel.OrderStatus, Mode=TwoWay}" Grid.Row="2"/>
+                            <TextBlock Style="{StaticResource items}" Text="{Binding OrderStatus, Mode=TwoWay}" Grid.Row="2"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>       
             </ListView>
+            </ScrollViewer>
         </Border>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
@@ -221,7 +224,7 @@
             </Button>
 
 
-            <ComboBox ItemsSource="{Binding OrderMasterDtailsViewModel.OrderStatusList}" SelectedItem="{Binding OrderMasterDtailsViewModel.OrderStatus, Mode=TwoWay}" 
+            <ComboBox ItemsSource="{Binding OrderStatusList}" SelectedItem="{Binding OrderStatus, Mode=TwoWay}" 
                       HorizontalAlignment="Center" Margin="10,0,0,0" VerticalAlignment="Center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
                       FlowDirection="LeftToRight" PlaceholderText="Sags Stadie"/>
             
