--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MobilReklame.Controllers.ViewModels.OrderVM"
+    xmlns:customer="using:MobilReklame.Controllers.ViewModels.CustomerVM"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:interop="using:Windows.UI.Xaml.Interop"
@@ -75,7 +76,8 @@
                     </Style>
                 </Grid.Resources>
 
-                <StackPanel Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0.5,0,0,0">
+                    <StackPanel Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TextBlock Style="{StaticResource textblocks}"/>
 
                     <TextBlock Style="{StaticResource textblocks}" Text="CVR."/>
@@ -97,6 +99,7 @@
                     <TextBlock Style="{StaticResource textblocks}" Text="Opgave Materialer" Margin="0,70,20,0"/>
                     <TextBlock Style="{StaticResource textblocks}"/>
                 </StackPanel>
+                </Border>
 
                 <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TextBlock Style="{StaticResource textblocks}" Text="Kunde information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
@@ -120,6 +123,7 @@
                     <TextBox x:Name="OrderCustomer" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch" Text="{Binding OrderCustomer.ContactName, Mode=TwoWay}"/>
                     <TextBlock Style="{StaticResource textblocks}"/>
                 </StackPanel>
+ 
             </Grid>
         </ScrollViewer>
 
@@ -153,12 +157,14 @@
             <Button x:Name="Tab4" Content="Tab 4" Style="{StaticResource TabStyle}"/>
 
         </StackPanel>
-        
+
         <Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="Black" BorderThickness="0,0,0.5,0" Grid.Row="1" Grid.RowSpan="2">
             <ScrollViewer VerticalScrollBarVisibility="Visible">
-                
                 <ListView x:Name="CaseList" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" ItemsSource="{Binding ItemViewModelCollection, Mode=TwoWay}" 
                       SelectedItem="{Binding ItemViewModelSelected, Mode=TwoWay}">
+                    <ListView.DataContext>
+                        <customer:CustomerMDVM/>
+                    </ListView.DataContext>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -182,25 +188,32 @@
 
                             <StackPanel Orientation="Horizontal" Width="auto">
                                 <TextBlock Text="Kunde navn:" Style="{StaticResource items}"/>
-                                <TextBlock Text="{Binding OrderCustomer.CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding CustomerName, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Grid.Column="1" Width="auto">
                                 <TextBlock Text="CVR nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
-                                <TextBlock Text="{Binding OrderCustomer.CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding CvrNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Grid.Row="1">
                                 <TextBlock Text="E-mail:" Style="{StaticResource items}"/>
-                                <TextBlock Text="{Binding OrderCustomer.Email, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding Email, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
                                 <TextBlock Text="Tlf nr.:" Style="{StaticResource items}" Margin="20,0,5,0"/>
-                                <TextBlock Text="{Binding OrderCustomer.PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
+                                <TextBlock Text="{Binding PhoneNumber, Mode=TwoWay}" Style="{StaticResource items}"/>
                             </StackPanel>
 
-                            <TextBlock Style="{StaticResource items}" Text="{Binding OrderStatus, Mode=TwoWay}" Grid.Row="2"/>
+                            <Border BorderBrush="Black" BorderThickness="0,0,0,0.5" Grid.Row="2" Grid.ColumnSpan="2" Width="1000">
+                                <StackPanel HorizontalAlignment="Stretch">
+                                    <StackPanel.DataContext>
+                                        <local:OrderMDVM/>
+                                    </StackPanel.DataContext>
+                                <TextBlock Style="{StaticResource items}" Text="{Binding OrderStatus, Mode=TwoWay}"/>
+                                </StackPanel>
+                            </Border>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>       
